# gena_genos_serving

./: .gitignore  CLAUDE.md  README.md  app.py  fastapi_app.py  requirements.fastapi.txt  requirements.txt  run-fastapi-local.sh  run_aspose_test.sh  test-saas-code-serving.js  translation_ochestration.py  메모리.xlsx  성능평가.xlsx
translation_2/: README.md  pyproject.toml  service.py
translation_2/prompts/: bilingual_markdown_memory_compress.jinja  office_translate_retry_system.jinja  translation_bilingual_summary_memory.jinja  translation_pre_analysis.jinja  translation_style_context.jinja
translation_2/scripts/: apply_fontconfig.sh  validate_document_term_memory_snapshot.py
translation_2/stores/: session_store.py
translation_2/tmp/bilingual_summary_memory/: 250_.docx__0347eb9a00c3416cb32e41dc46ce32bb__bilingual-summary-memory.json  250_.docx__13ed64fcd72f4a5e9c2079e9ff2bf709__bilingual-summary-memory.json  250_.docx__31568f7bef6147349ca924a0ff5e72d1__bilingual-summary-memory.json  250_.docx__460c0e7c1c9f4232b81b8fa4f742be1f__bilingual-summary-memory.json  250_.docx__88c3c509967a44b29c424d8ffdfed91d__bilingual-summary-memory.json  250_.docx__92881f56492848caac056981de6adfd9__bilingual-summary-memory.json  250_.docx__9ff05b9ab92640ec8bf505f2b2882702__bilingual-summary-memory.json  Consultant-Services-Manual-2023.docx__852a5cb4c003468baa2fdbf9a22820ba__bilingual-summary-memory.json  (+2 more)
translation_2/translation_pipeline/: aspose_cells_html_export.py
translation_2/translation_pipeline/common/: bilingual_summary_memory.py  prompts.py  (+2 more)
translation_2/utils/: exceptions.py
(+3125 files in other folders)
