[project]
name = "gena-agent-genos"
version = "0.1.0"
description = "GenA multi-mode chat agent (basic / research / slide / image)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.124.0",
    "uvicorn>=0.38.0",
    "python-dotenv>=1.2.1",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.12.0",
    "python-multipart>=0.0.9",
    "openai>=1.0.0",
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "requests>=2.31.0",
    "html2text>=2024.2.26",
    "lxml>=5.0.0",
    "Jinja2>=3.1.0",
    "weaviate-client>=4.0.0",
    "packaging>=23.0",
    "cryptography>=44.0.0",
    "pymupdf>=1.27.2.3",
    "openpyxl>=3.1.5",
    "pdfplumber>=0.11.9",
    "pillow>=12.2.0",
    "python-docx>=1.2.0",
    "python-pptx>=1.0.2",
    "azure-storage-blob>=12.20.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
